--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <title>Front</title>
   
   <base href="/">
-   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Contrail+One|Cabin" rel="stylesheet">
+   <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Contrail+One|Cabin" rel="stylesheet"> -->
   
 </head>
 <body>
