--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
-<!doctype html>
+
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Front</title>
   
   <base href="/">
-   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" Content-Type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Contrail+One|Cabin" rel="stylesheet" Content-Type="text/css">
+   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Contrail+One|Cabin" rel="stylesheet" type="text/css" >
   
 </head>
 <body>
